# multilinguality-at-the-edge

./: .gitignore  .gitmodules  README.md  authors.tex  draft.tex  macros.tex  main.py  pyproject.toml  tacl2021.bib  tacl2021v1-template.tex
.claude/: settings.json
analysis/: README.md  collaboration_sectors.py  deployment_domains.py  infra_lingdiv.py  language_coverage.py  literature_clusters.py  model_sizes.py  nlp_literature.py  paper_distribution.py  utils.py
data/: annotation_guidelines.md  living_languages_per_country_2025.csv  manual_papers.csv  papers_application.csv  papers_both.csv  papers_multilingual_edge_llm.csv  papers_multilingual_edge_llm_backup.csv  papers_with_clusters.csv
dataset/: interventions_dataset.csv  llm_advances.csv  national_ai_strategies.csv
docs/: README.md  index.html  robots.txt  sitemap.xml
docs/assets/: giscus-theme.css
docs/assets/data/: domain_method_network.json  infra_lingdiv_ict.json  infra_lingdiv_network.json  literature_clusters.json  model_sizes.json  model_sizes_meta.json
docs/css/: chia.css  style.css
docs/js/: main.js  pipeline.js
docs/js/figures/: fig-domain-network.js  fig-loader.js  (+3 more)
figures/: case_study.tex  pipeline.tex  taxonomy.tex
plot_outputs/: deployment_domains_table.md
scripts/: build_hf_space.sh  filter_papers.py  llm_annotate.py  prompts.py  s2_scrape.py
tables/: binding_constraint_diagnostic.tex  deployment_contexts.tex  lm_pipeline_edge_lm_systems.tex  survey_comparisons.tex
website/: index.html
website/css/: fonts.css  style.css
website/js/: main.js  pipeline-mesh.js  pipeline.js
