[project]
name = "multilingual-edge-nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "ipython>=9.11.0",
    "isort>=8.0.1",
    "ruff>=0.15.6",
]
