[project]
name = "multilingual-edge-nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adjusttext>=1.3.0",
    "datasets>=4.7.0",
    "dotenv>=0.9.9",
    "hdbscan>=0.8.40",
    "keybert>=0.9.0",
    "matplotlib>=3.10.8",
    "openai>=2.28.0",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "sentence-transformers>=5.3.0",
    "torch>=2.11.0",
    "umap-learn>=0.5.7",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "ipython>=9.11.0",
    "isort>=8.0.1",
    "ruff>=0.15.6",
]
